--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -53,6 +53,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="/image-prompts">Image Prompts</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/translations">Translations</a>
+                    </li>
                 </ul>
             </div>
         </div>
